--- a/child_pages/cc-elections/Candidates/bailey.html
+++ b/child_pages/cc-elections/Candidates/bailey.html
@@ -166,29 +166,24 @@
               <h6 class="page-title">Dave Bailey</h6>
               <p>          
 
-                Assemblyman Dave Bailey does not appear to have a dedicated campaign website or centralized source of information for voters to reference. While basic profiles 
-                exist on the NJ Legislature website and the Assembly Democrats site, these offer limited insight into his current campaign intentions or platform.
+                Assemblyman Dave Bailey remains without a dedicated campaign website or a single, centralized hub where voters can easily find his priorities 
+                for this election cycle. While his official legislative profiles provide a record of past activity, they offer little insight into his 
+                present agenda or how he intends to serve if re-elected. We are now firmly in the general election phase — with mail-in ballots already 
+                circulating — and despite multiple outreach attempts to his listed contact information, no responses to our questionnaire or direct links 
+                to comprehensive campaign materials have been received.
                 <br>
                 <br>
-                He has not responded to direct outreach via the contact information provided to the county clerk and has not participated in any structured voter information 
-                efforts like interviews or questionnaires. No upcoming or recent public events have been broadly advertised, though he was briefly spotted at Deerfield Day last 
-                year and expressed a friendly attitude toward civic engagement and public access to information.
+                We have begun to notice some pieces of campaign messaging surfacing on Facebook, which we will try to incorporate into our coverage as the 
+                season progresses. However, our approach has been to contact candidates well before the heart of campaign season so that preliminary 
+                messaging about agendas, issues, and events can be handled in a consolidated, professional way. This prevents voters and the press from 
+                having to piece together information from scattered social media posts and unkown appearances at public events — especially when many voters 
+                are not active on those platforms or aware of those events. 
+                Without a proactive, public-facing platform or direct communication, voters are still left to rely largely on past impressions and limited 
+                official profiles to determine where Bailey stands.
                 <br>
                 <br>
-                Issue-based messaging specific to this election is not available. While Bailey has sponsored legislation during his time in the Assembly, it’s unclear whether any 
-                particular bills reflect a present-day agenda. Without direct statements or an updated public-facing platform, voters are left to speculate.
-                <br>
-                <br>
-                While Assemblyman Bailey does hold office and may be working behind the scenes, we encourage greater proactive transparency to ensure voters are not expected to 
-                rely solely on past impressions or scattered official profiles to determine where he stands.
-                <br>
-                <br>
-                Note: While this is technically still the primary phase, both parties are running unopposed slates, meaning all four current candidates are expected to advance to the general 
-                election. This creates a valuable opportunity for candidates to begin clearly communicating their platforms early, giving voters more time to learn and engage. We encourage all 
-                candidates to take advantage of this head start by providing accessible, detailed information about their agendas and priorities.
-                <br>
-                <br>
-                For these reasons, Bailey receives a below average to average rating for transparency and accessibility.
+                For these reasons, Bailey’s transparency/accessibility rating remains below average to average at this stage. A clear, consolidated platform 
+                and engagement with voter information efforts would significantly raise that rating and better serve the electorate.
                 <br>
                 <br>
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
@@ -276,7 +271,7 @@
              <button id="quick-summary-reopen" class="quick-sum">quick summary</button>
 
              <div class="election-date">
-                 <p>This election is on June 10th, 2025</p>
+                 <p>This election is on November 4th, 2025</p>
              </div>
 
              <div class="animal-box">
