cumberland county commissioners quick election intro update

--- a/child_pages/cc-elections/cc_county_commissioners_2024.html
+++ b/child_pages/cc-elections/cc_county_commissioners_2024.html
@@ -278,37 +278,39 @@
             <details>
                 <summary style="cursor:pointer; color:blue; text-decoration:underline;">Learn More</summary>
                 <p>
-                    The general election ballot is now set: Republican incumbents Victoria Lods and Douglas Albrecht will face Democratic challengers John Capizola and Yolanda Garcia 
-                    Balicki.
+                    Mail-in ballots are already out, and voters are heading into the fall season with a clearer sense of how the two tickets are 
+                    approaching transparency. Republican incumbents Victoria Lods and Douglas Albrecht will face Democratic challengers John Capizola and 
+                    Yolanda Garcia Balicki in November.
                     <br>
                     <br>
-                    This race is notable for both what has changed and what hasn’t. On one hand, Republicans have, over the past few years, been more consistently transparent and 
-                    accessible—attending public events and offering opportunities for voters to hear from them directly. On the other hand, with the recent decision to make the 
-                    bi-weekly Republican breakfasts Republicans-only, that relative advantage in openness will almost certainly shrink.
+                    Over the summer, both the dynamics and the information gaps have become sharper. Commissioner Albrecht has now completed a 
+                    second substantive interview with me on his radio show and even joined a “man on the street” segment at the Vineland Food 
+                    Truck Festival. Commissioner Lods is scheduled to appear on my radio show on September 30. These are not one-off appearances 
+                    but sit on top of two years of openness—allowing me to attend the bi-weekly Republican breakfasts, granting repeated access, 
+                    and providing voters multiple touchpoints, despite that access having changed recently.
                     <br>
                     <br>
-                    For voters, this means we are heading into another election season where getting clear, reliable, and timely information may once again feel like a scavenger hunt. 
-                    Part of why this project exists is because there is no centralized, official way to access *comprehensive* candidate and issues-based information when your sample 
-                    ballot arrives. What should be a simple afternoon of reviewing 3rd party vetted platforms too often turns into weeks, months, or years of emails, phone calls, and tracking 
-                    down events.
+                    By contrast, Capizola and Garcia-Balicki have so far remained hesitant to engage with this platform. Apart from surface-level 
+                    biographical blurbs on the CCRDO website, there is still no centralized or substantive agenda/issue content available to 
+                    voters. Behind the scenes, I’ve encountered repeated uncertainty about who their campaign managers are and whether county 
+                    Democrats might offer their own open forum (akin to the Republican breakfast). One local source even remarked something to the 
+                    effect of, “You couldn’t 
+                    pay people to go to such a Democrat meeting,” underscoring how few opportunities have been created for public exchange.
                     <br>
                     <br>
-                    Right now, Capizola and Balicki have a low transparency and accessibility rating—but that is easily fixable. Filling out a candidate questionnaire takes an hour or two. 
-                    Participating in a radio interview takes another hour. Recording a longer podcast later in the season might take a few more. In other words, with an afternoon’s effort, 
-                    they could make sure every Cumberland County voter has free, well-promoted access to their positions before November.
+                    I’m not trying to “beat up” on county-level Democrats; the question I’ve been asking for two years is still unanswered: 
+                    “What substantive argument is anyone making for county-level Democrats—even if you’re not thrilled with current Republican 
+                    leadership?” One might think that would be a top priority when just a few years ago their State Senatorial candidate "ghosted the 
+                    campaign", as per the Atlantic City Press. Until voters are given a clear, well-promoted picture of each side’s priorities, the 
+                    risk remains that ordinary 
+                    citizens will have to do detective work just to cast an informed ballot, at least for one side of the aisle.
                     <br>
                     <br>
-                    At the same time, while Lods and Albrecht are ahead of the curve thanks to past engagement, there are still four months to go, and anything can happen—politically or 
-                    practically. Issues evolve, priorities shift, and if there is no longer an open-door forum for updates, we risk ending up exactly where we started two years ago: 
-                    having to invest full-time hours just to be reasonably informed.
-                    <br>
-                    <br>
-                    If that is genuinely the baseline expectation for civic engagement in 2025—that citizens must piece everything together themselves—we have to ask serious questions 
-                    about whether that’s a fair or sustainable system.
-                    <br>
-                    <br>
-                    In short, this race is wide open in terms of how transparent and responsive it could become. I’ll be watching closely—and doing my best to make sure the voters of 
-                    Cumberland County don’t have to do all the work alone.
+                    In short, this race is somewhat still open—not only in terms of policy but also in terms of transparency and responsiveness. 
+                    The incumbents have banked some goodwill with repeated appearances, but they’re not finished yet; and the challengers could 
+                    still close the information gap quickly if they choose, I'm just not holding my breath that they will. I’ll keep tracking 
+                    developments as a citizen journalist so that Cumberland County voters 
+                    don’t have to piece it all together on their own.
                 </p>
             </details>
         </div>
