fairfield township quick election intro update

--- a/child_pages/cc-elections/cc_county_commissioners_2024.html
+++ b/child_pages/cc-elections/cc_county_commissioners_2024.html
@@ -332,41 +332,134 @@
                 <summary style="cursor:pointer; color:blue; text-decoration:underline;">Learn More</summary>
 
                     <details>
-                        <summary style="cursor:pointer; color:blue; text-decoration:underline;">Issue 1</summary>
+                        <summary style="cursor:pointer; color:blue; text-decoration:underline;">Issue 1 — Literacy & Library Access</summary>
                         <p style="margin-top:10px; text-align: center;">
-                            With the shutting down of newspapers all across the country, information regarding elections is scattered all over the 
-                            internet and oftentimes appears biased because it is coming from the candidates themselves and their parties. The local paper,
-                            The Daily Journal,
-                            was absorbed by a parent company and the last reporter in the county retired last year. Without a trusted
-                            3rd party entity providing objective oversight regarding issues facing the county, the public is left 
-                            woefully uninformed about what is going on, especially in regards to local elections where biased political
-                            messaging could be running rampant. While most of the candidates agree we need press coverage, none of them
-                            seem to be particularly interested engaging in an action plan to fix the problem for a variety of reasons.
-                            One candidate said "With the lack of press coverage, candidates are left to be their own press on social media." 
-                            While we appreciate the pro-active approach to do something to get information out to the public, this approach could easily lead 
-                            to the appearance of overwhelming bias and scattered sources of information... who has the time to
-                            scour all the candidates social media pages, verify the facts, send follow-up questions that oftentimes go unanswered, attend 
-                            various events that have entrance fees, etc etc etc? The press, that's who. Another candidate said "If I get involved in forming 
-                            the  local press, it could be viewed as a bias for my party." Understandable, but we are still ultimately left uninformed. The 
-                            public needs reasonable access to comprehensive, consolidated information regarding election choices. "We'll let the public know 
-                            what we want them to know", this did not come from a candidate, but rather from a campaign organizer. It's pretty clear that we 
-                            have a problem, but not necessarily anyone willing to solve it.
+                            Cumberland County recently completed its most significant library renovation in over four decades, transforming the 
+                            main facility into a multi-purpose resource center with expanded technology, family-friendly programming, and safer 
+                            children’s areas. Hundreds of events are now hosted each year, from GED prep and computer literacy to yoga and 
+                            cultural activities. Plans are also underway for an accessible playground with literacy-themed story panels in 
+                            front of the library. However, a proposed grant-funded satellite library and visitor center in Maurice River 
+                            Township—intended to serve outlying communities with few public resources—lost its funding early. The question 
+                            for voters is how to maintain momentum on literacy initiatives, ensure equitable access for rural residents, and 
+                            support libraries as hubs for education, workforce development, and civic engagement.
                         </p>
-                    </details>
+                        </details>
 
-                    <details>
-                        <summary style="cursor:pointer; color:blue; text-decoration:underline;">Issue 2</summary>
-                        <p style="margin-top:10px;">
-                            <!-- Content for Issue 2 goes here -->
+                        <details>
+                        <summary style="cursor:pointer; color:blue; text-decoration:underline;">Issue 2 — Health Outcomes & County Services</summary>
+                        <p style="margin-top:10px; text-align: center;">
+                            Cumberland County has consistently ranked at or near last place in New Jersey for health outcomes. While there has been 
+                            a slight improvement in rankings, structural challenges remain. County officials link public health to fiscal and 
+                            staffing reforms, such as finalizing union contracts, retaining experienced employees, and improving conditions at 
+                            the county jail. Inter-municipal cooperation—like the Sheriff’s Office lending assistance to local police—has also 
+                            been cited as a factor in community resilience. Voters may consider how best to direct resources to improve public 
+                            health and safety while ensuring stable and effective delivery of county services.
                         </p>
-                    </details>
+                        </details>
 
-                    <details>
-                        <summary style="cursor:pointer; color:blue; text-decoration:underline;">Issue 3</summary>
-                        <p style="margin-top:10px;">
-                            <!-- Content for Issue 3 goes here -->
+                        <details>
+                        <summary style="cursor:pointer; color:blue; text-decoration:underline;">Issue 3 — Income Per Household & Economic Stability</summary>
+                        <p style="margin-top:10px; text-align: center;">
+                            The county’s low household income rankings reflect deeper issues such as slow project management, outdated systems, 
+                            and missed economic opportunities. Modernizing county operations, completing capital improvements, and retaining 
+                            institutional knowledge are seen as prerequisites to attracting and keeping businesses and residents. Recent efforts 
+                            have included settling multiple union contracts, leveraging federal and state funding for infrastructure projects 
+                            like the Middle Mile broadband backbone, and lowering the county tax rate by five cents. The broader question is how 
+                            to sustain these gains and strengthen the foundational services that make economic development possible.
                         </p>
-                    </details>
+                        </details>
+
+                        <details>
+                        <summary style="cursor:pointer; color:blue; text-decoration:underline;">Issue 4 — Government Efficiency & Institutional Reform</summary>
+                        <p style="margin-top:10px; text-align: center;">
+                            Many of Cumberland County’s challenges—low income, poor health rankings, and sluggish infrastructure progress—are tied 
+                            to inefficiencies within local government. Examples include delayed capital projects, unresolved labor contracts, 
+                            and outdated systems. Addressing these issues has involved finalizing contracts, improving staff retention, and 
+                            promoting inter-agency cooperation, such as sharing fire equipment between municipalities. Voters may weigh the 
+                            importance of internal capacity-building, reduced bureaucratic drag, and better coordination between departments 
+                            and municipalities as a path to restoring public trust and delivering results.
+                        </p>
+                        </details>
+
+                        <details>
+                        <summary style="cursor:pointer; color:blue; text-decoration:underline;">Issue 5 — South Avenue Culvert Replacement</summary>
+                        <p style="margin-top:10px; text-align: center;">
+                            The long-delayed rebuild of the South Avenue culvert in Bridgeton has become a symbol of broader infrastructure and 
+                            permitting problems. Despite funding, planning, and contractor coordination being complete, the project remains stuck 
+                            due to state and federal red tape, including seven separate permits from multiple agencies. This case highlights the 
+                            tension between local readiness and higher-level regulatory bottlenecks, raising questions about how to streamline 
+                            processes and ensure timely completion of critical infrastructure.
+                        </p>
+                        </details>
+
+                        <details>
+                        <summary style="cursor:pointer; color:blue; text-decoration:underline;">Issue 6 — Middle Mile Broadband</summary>
+                        <p style="margin-top:10px; text-align: center;">
+                            The Middle Mile project was designed to install a high-capacity fiber-optic backbone across Cumberland and Salem 
+                            Counties, enabling local providers to bring last-mile internet to underserved rural areas. Salem County has now taken 
+                            the lead, securing over $20 million in federal funding. Supporters argue the project could modernize broadband access, 
+                            attract data centers and remote work opportunities, and generate revenue through leasing fiber lines. The key issue is 
+                            whether and how Cumberland County can still capitalize on this opportunity to close the digital divide and spur 
+                            economic development.
+                        </p>
+                        </details>
+
+                        <details>
+                        <summary style="cursor:pointer; color:blue; text-decoration:underline;">Issue 7 — County Jail Reform & Workforce Stabilization</summary>
+                        <p style="margin-top:10px; text-align: center;">
+                            Cumberland County is transitioning from a troubled local jail system toward a regional partnership with Camden County 
+                            after a failed joint facility project with Salem and Gloucester. The short-term plan would reduce transport and overtime costs, 
+                            while the long-term vision involves a multi-county complex where Cumberland would share decision-making and staffing roles. 
+                            Questions remain about how to handle the existing $16 million concrete slab from the abandoned project, the $60 million in bonded 
+                            funds, and ongoing maintenance needs at the current jail. Voters may consider how to balance cost savings, workforce conditions, 
+                            and public safety in this shift. There is also concern regarding the new jail project being controlled by an unelected entity which 
+                            would be making direct decisions on how county tax dollars are being used.
+
+                        </p>
+                        </details>
+
+                        <details>
+                        <summary style="cursor:pointer; color:blue; text-decoration:underline;">Issue 8 — Nabb Avenue Extension</summary>
+                        <p style="margin-top:10px; text-align: center;">
+                            The Nabb Avenue Extension project aims to create a direct connection between Route 55 and Route 49, unlocking access to the 
+                            Millville Airport, industrial sites, farmland, and recreational areas on the western side of the Maurice River. Negotiated without 
+                            eminent domain, the route includes erosion control measures and an overpass to maintain farm access. One could describe it as a 
+                            “cornucopia of economic potential,” citing increased property values, job growth, and business expansion. While engineering and 
+                            planning are complete, the project is stalled due to the loss of federal earmarks. The issue now is how to secure funding and 
+                            move the project forward.
+                        </p>
+                        </details>
+
+                        <details>
+                        <summary style="cursor:pointer; color:blue; text-decoration:underline;">Issue 9 — Mental Health & Addiction Services</summary>
+                        <p style="margin-top:10px; text-align: center;">
+                            Expanding access to mental health and addiction services—particularly for students—is a recurring concern in Cumberland County. 
+                            Many programs already exist, but awareness and access remain uneven. Local leaders have highlighted partnerships with recovery 
+                            organizations and the importance of recognizing community members who champion treatment access. The challenge is how to coordinate 
+                            these efforts, secure sustainable funding, and reach those who need services most. Our correspondence with the county prosecutor 
+                            emphasizes that while progress is being made, there is much more to do and should be a topic of discussion this election season.
+                        </p>
+                        </details>
+
+                        <details>
+                        <summary style="cursor:pointer; color:blue; text-decoration:underline;">Issue 10 — Community Engagement</summary>
+                        <p style="margin-top:10px; text-align: center;">
+                            There is growing interest in increasing civic participation, especially among youth. Some officials stress that public servants 
+                            should remain visible and connected to residents, while encouraging community members to take part in political discussions and 
+                            campaigns. The broader issue is how to foster a culture of engagement so that residents feel empowered to influence decisions 
+                            and hold leaders accountable. The challenge has additional concerns with the recent tragedy surrounding Charlie Kirk.
+                        </p>
+                        </details>
+
+                        <details>
+                        <summary style="cursor:pointer; color:blue; text-decoration:underline;">Issue 11 — Promoting the Bayshore / Economic Development</summary>
+                        <p style="margin-top:10px; text-align: center;">
+                            The Bayshore region offers opportunities for kayaking, restaurants, bird trails, and eco-tourism. Marketing it as a regional 
+                            destination has been proposed as a way to enhance quality of life and attract new businesses and residents. This ties into larger 
+                            conversations about economic development, environmental stewardship, and the balance between growth and conservation in 
+                            Cumberland County’s coastal areas.
+                        </p>
+                        </details>
 
             </details>
 
