millville quick election intro

--- a/child_pages/cc-elections/millville_commissioners_2024.html
+++ b/child_pages/cc-elections/millville_commissioners_2024.html
@@ -235,13 +235,38 @@
             <details>
                 <summary style="cursor:pointer; color:blue; text-decoration:underline;">Learn More</summary>
                 <p>
-                    This year’s Millville City Commissioners race is shaping up to be one of the most crowded in recent memory. All five seats are open, and there are already reports that as many as 25 
-                    candidates may file to run. That’s a lot to keep track of, and it’s still early in the season, so much of the information is yet to come in.
-                    <br>
-                    <br>
-                    At this stage, incumbent Carole Cossaboon has submitted her responses to the candidate questionnaire, and Patricia Clark-Kears has shared a detailed platform and recently appeared on 
-                    my radio show on July 8, 2025. Voters interested in learning more should check back throughout the campaign as additional candidates release their plans and more interviews and updates 
-                    are posted.
+                This year’s Millville City Commissioners race is one of the most crowded in recent memory. 
+                All five seats are open, and 19 candidates have qualified for the ballot. 
+                Mail-in ballots have already been sent out, and the first gubernatorial debate of the season took place last Sunday, 
+                setting a busy backdrop for local voters, with final decisions already being made and the campaign window quickly closing.
+                </p>
+                <br><br>
+                <p>
+                InformTheVoteNJ has reached out to all 19 candidates with varying levels of response. 
+                Several public comments have also been made at Millville City Commission meetings to ensure 
+                every candidate is aware of this outreach, though it remains each candidate’s choice how to conduct their campaign. 
+                With limited press coverage in the county, transparency and accessibility become especially important factors for voters trying to compare 
+                candidates.
+                </p>
+                <br><br>
+                <p>
+                Based on outreach so far, the following candidates have been <strong>notably transparent and accessible</strong>: 
+                Dan Dixon, Robert McQuade, Patricia Clark-Kears, Joe Sooy, Rachel Green, and Thomas McGinty. 
+                <strong>Mid-tier levels of response</strong> have come from Sherman Taylor, Marissa Ranello, Heather Garisson, Daniel Gregoire, 
+                Carole Cossaboon, Richard Kott, and David Summers. 
+                <strong>Less responsive to date</strong> have been Joseph Derella, Roy Sheppard, Carmine Delvicario, Newell Branin, Benjamin Romanik, and 
+                Victoria Broomall.
+                </p>
+                <br><br>
+                <p>
+                These tiers are not an exact science. Some in the top tier are making strategic choices that aren’t fully “top-tier” transparency moves; 
+                some at the bottom are well-known figures who say they plan to become more accessible; and those in the middle may argue they’ve been more 
+                transparent than reflected here. 
+                The broader point is that the status quo could be raised so that voters can easily distinguish between strategic communication and genuine 
+                evasiveness. 
+                Many issues are on the table in this race, and it remains unusual for voters to have so little clear information on candidate stances. 
+                Use this as a rough guide while making your own decisions about the information available. 
+                InformTheVoteNJ continues seeking and sharing direct candidate information as it becomes available.
                 </p>
             </details>
         </div>
