bridgeton school board quick election intro

--- a/child_pages/cc-elections/bridgeton_school_board_2024.html
+++ b/child_pages/cc-elections/bridgeton_school_board_2024.html
@@ -244,6 +244,21 @@
             <details>
                 <summary style="cursor:pointer; color:blue; text-decoration:underline;">Learn More</summary>
                 <p>
+                Bridgeton voters will choose <strong>members of the School Board</strong> in this year’s election. 
+                Four candidates are on the ballot seeking to shape the district’s policies and priorities.
+                </p>
+                <br><br>
+                <p>
+                InformTheVoteNJ has conducted its usual outreach to all candidates, including sending a liaison to make public comment at a 
+                recent school board meeting and working with an elected representative who offered to make phone calls encouraging candidate 
+                participation. 
+                As of now, no responses have been received from any of the candidates.
+                </p>
+                <br><br>
+                <p>
+                With limited press coverage and no candidate replies so far, voters should be aware that publicly available information on these 
+                school board hopefuls remains scarce. 
+                InformTheVoteNJ will continue being open to direct input from each candidate and will update this section as more details emerge.
                 </p>
             </details>
         </div>
