commercial township school board race quick intro update

--- a/child_pages/cc-elections/commercial_school_board_2024.html
+++ b/child_pages/cc-elections/commercial_school_board_2024.html
@@ -246,6 +246,22 @@
             <details>
                 <summary style="cursor:pointer; color:blue; text-decoration:underline;">Learn More</summary>
                 <p>
+                Commercial Township voters will choose <strong>members of the School Board</strong> in this year’s election. 
+                Several candidates are on the ballot seeking to help guide the district’s direction and policies.
+                </p>
+                <br><br>
+                <p>
+                InformTheVoteNJ’s only meaningful prior communication has been with <em>LaRae Smith</em>, and that was focused on her earlier 
+                County Commissioner primary race rather than her current school board candidacy. 
+                Another candidate has expressed interest in participating in our voter information effort but has not followed through with outreach. 
+                In addition, the current board president has expressed interest in discussing the state of the board and its issues but has not 
+                yet set a firm interview date.
+                </p>
+                <br><br>
+                <p>
+                With limited press coverage and minimal direct candidate engagement so far, publicly available information on these school board 
+                hopefuls remains scarce. 
+                InformTheVoteNJ will continue seeking input from each candidate and will update this section as more details emerge.
                 </p>
             </details>
         </div>
