hopewell-shiloh school board quick intro update

--- a/child_pages/cc-elections/hopewell-shiloh_school_board.html
+++ b/child_pages/cc-elections/hopewell-shiloh_school_board.html
@@ -247,6 +247,20 @@
             <details>
                 <summary style="cursor:pointer; color:blue; text-decoration:underline;">Learn More</summary>
                 <p>
+                Hopewell–Shiloh voters will choose <strong>members of the School Board</strong> in this year’s election. 
+                Five candidates are on the ballot seeking to shape the district’s policies and priorities.
+                </p>
+                <br><br>
+                <p>
+                Of the five, incumbent <em>J.R. Carman</em> has been the only candidate to provide substantive responses to InformTheVoteNJ’s 
+                outreach. 
+                He answered our questionnaire and has participated in two radio interviews with us—one on his show and one on ours—with another 
+                appearance scheduled for this Saturday.
+                </p>
+                <br><br>
+                <p>
+                Publicly available information on the other candidates remains limited as of now. 
+                InformTheVoteNJ will continue seeking input from each candidate and will update this section as more details emerge.
                 </p>
             </details>
         </div>
